--- a/styles/style.css
+++ b/styles/style.css
@@ -6,20 +6,231 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: "Helvetica Neue", Arial, sans-serif;
+}
+
+.logo {
+  width: 183px;
+  height: 32px;
 }
 
 .header {
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   /* выше установили ограничения для секции */
+  position: relative;
+}
+
+.logo_place_header {
+  position: absolute;
+  top: 30px;
+  left: 64px;
+}
+
+.header__heading {
+  margin: 0 0 0 64px;
+  font-size: 102px;
+  font-weight: bold;
+  line-height: 96px;
+  width: 730px;
+  z-index: 2;
+}
+
+.header__text {
+  margin: 0;
+  font-size: 18px;
+  line-height: 25px;
+  width: 388px;
+  z-index: 2;
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+}
+
+.header_link {
+  color: #2f80ed;
+  text-decoration: none;
+}
+
+.header__image {
+  width: 765px;
+  height: 608px;
+  z-index: 1;
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background-color: #2f80ed;
+  position: absolute;
+  top: 64px;
+  right: 0;
+}
+
+.description {
+  padding: 100px 0 0 0;
+}
+
+.two-columns {
+  width: 80%;
+  min-width: 784px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+}
+
+.two-columns__brief {
+  width: 175px;
+  line-height: 1.2;
+  font-size: 18px;
+  color: #2f80ed;
+}
+
+.two-columns__main-text {
+  width: 80%;
+  min-width: 784px;
+}
+
+.two-columns__paragraph {
+  line-height: 34px;
+  font-size: 24px;
+}
+
+.two-columns__paragraph_indent {
+  margin: 30px 0;
+}
+
+.two-columns_bold {
+  font-weight: bold;
+}
+
+.digits {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: auto;
+  align-items: center;
+  padding: 100px 0;
+}
+
+.section-title {
+  width: 60%;
+  font-size: 60px;
+  line-height: 1.15;
+  font-weight: bold;
+  margin: 0;
+  text-align: center;
+}
+
+.section-subtitle {
+  width: 60%;
+  line-height: 34px;
+  font-size: 24px;
+  text-align: center;
+  margin: 20px 0 0 0;
+}
+
+.table {
+  width: 1100px;
+  display: flex;
+  margin: auto;
+  flex-direction: column;
+  z-index: 1;
+}
+
+.table__row {
+  display: flex;
+  justify-content: space-between;
+}
+
+.table__cell {
+  width: 250px;
+  margin: 60px 0 0 0;
+}
+
+.table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  margin: 0;
+}
+.table__text {
+  line-height: 1.2;
+  font-size: 18px;
+  margin: 20px 0 0 0;
+}
+
+.feynman {
+  height: 790px;
+  display: flex;
+  position: relative;
+  background-color: #f2f2f2;
+}
+.feynman__image {
+  width: 867px;
+  height: 637px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.feynman__text {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+}
+
+.feynman__title {
+  width: 648px;
+  margin: 100px 0 0 0;
+  z-index: 2;
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: bold;
+  text-align: center;
+}
+
+.feynman__subtitle {
+  z-index: 2;
+  line-height: 51px;
+  font-size: 36px;
+  text-align: center;
+  margin: 70px 0 0 0;
+}
+.feynman__link {
+  position: absolute;
+  right: 48px;
+  top: 50%;
+  line-height: 51px;
+  font-size: 36px;
+  color: #2f80ed;
+  text-decoration: none;
+}
+
+.kaufman {
+  padding: 90px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #1f1f1f;
+  position: relative;
+  overflow: hidden;
+}
+
+.section-title_theme_dark,
+.section-subtitle_theme_dark {
+  color: #ffffff;
+}
+
+.table_theme_dark {
 }
 
 /* и элемента с модификатором вида ключ-значение */
@@ -28,4 +239,105 @@
   color: white;
   margin-right: 0;
   margin-top: 80px;
+}
+
+.table__heading_theme_dark {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+.table__text_theme_dark {
+  line-height: 1.2;
+  font-size: 18px;
+}
+
+/*Блок section-title, модификатор theme в значении dark
+Блок section-subtitle, модификатор theme в значении dark
+Блок table, модификатор theme в значении dark
+Блок table, элемент cell, модификатор theme в значении dark
+Блок table, элемент heading, модификатор theme в значении dark
+Блок table, элемент text, модификатор theme в значении dark
+Блок kaufman, элемент triangle*/
+.kaufman__triangle {
+  position: absolute;
+  width: 877px;
+  height: 877px;
+  top: 0;
+  right: -210px;
+}
+
+.footer {
+  min-height: 350px;
+  background-color: #1f1f1f;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+}
+
+.footer__columns {
+  width: 90%;
+  margin: 60px 0 40px 0;
+  display: flex;
+  position: relative;
+  justify-content: space-between;
+}
+
+.footer__column_content_copyright {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.footer__column_content_info {
+}
+
+.footer__column-heading {
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.footer__column-links {
+  margin: 20px 0 16px 0;
+}
+
+.footer__list {
+  list-style-type: none;
+  padding-left: 0;
+  margin: 0;
+}
+
+.footer__list-link {
+  line-height: 30px;
+  font-size: 18px;
+}
+
+.footer__list-link_facebook::before {
+  content: url(../images/facebook_color_white.svg);
+  margin-right: 10px;
+}
+
+.footer__list-link_vk::before {
+  content: url(../images/vk_color_white.svg);
+  margin-right: 10px;
+}
+
+.footer__list-link_instagramm::before {
+  content: url(../images/instagram_color_white.svg);
+  margin-right: 10px;
+}
+
+.footer__column_content_social {
+}
+
+.footer__logo {
+  width: 183px;
+  height: 35px;
+}
+
+.footer__author {
+  line-height: 25px;
+  font-size: 18px;
+  margin: 18px 0;
 }
