--- a/styles/style.css
+++ b/styles/style.css
@@ -93,6 +93,8 @@
   line-height: 1.2;
   font-size: 18px;
   color: #2f80ed;
+  font-weight: normal;
+  margin: 0;
 }
 
 .two-columns__main-text {
@@ -303,6 +305,7 @@
 }
 
 .footer__list {
+  text-decoration: none;
   list-style-type: none;
   padding-left: 0;
   margin: 0;
@@ -340,4 +343,9 @@
   line-height: 25px;
   font-size: 18px;
   margin: 18px 0;
+}
+
+.footer_link {
+  text-decoration: none;
+  color: #ffffff;
 }
