--- a/styles/style.css
+++ b/styles/style.css
@@ -52,12 +52,12 @@
   bottom: 30px;
 }
 
-.header_link {
+.header__link {
   color: #2f80ed;
   text-decoration: none;
 }
 
-.header__image {
+.header__main-illustration {
   width: 765px;
   height: 608px;
   z-index: 1;
@@ -103,15 +103,12 @@
 }
 
 .two-columns__paragraph {
+  margin: 0 0 30px 0;
   line-height: 34px;
   font-size: 24px;
 }
 
-.two-columns__paragraph_indent {
-  margin: 30px 0;
-}
-
-.two-columns_bold {
+.two-columns__span-accent {
   font-weight: bold;
 }
 
@@ -131,6 +128,7 @@
   font-weight: bold;
   margin: 0;
   text-align: center;
+  z-index: 1;
 }
 
 .section-subtitle {
@@ -147,14 +145,20 @@
   margin: auto;
   flex-direction: column;
   z-index: 1;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 0;
 }
 
 .table__row {
+  padding: 0;
   display: flex;
   justify-content: space-between;
+  margin: 60px 0 0 0;
 }
 
 .table__cell {
+  list-style-type: none;
   width: 250px;
   margin: 60px 0 0 0;
 }
@@ -171,9 +175,10 @@
 }
 
 .feynman {
-  height: 790px;
+  min-height: 790px;
   display: flex;
   position: relative;
+  flex-direction: column;
   background-color: #f2f2f2;
 }
 .feynman__image {
@@ -184,15 +189,17 @@
   left: 0;
 }
 
-.feynman__text {
+/* .feynman__text {
   display: flex;
   flex-direction: column;
+  padding-top: 100px;
   margin: 0 auto;
-}
+} */
 
 .feynman__title {
+  padding-top: 100px;
   width: 648px;
-  margin: 100px 0 0 0;
+  margin: 0 auto;
   z-index: 2;
   line-height: 1.15;
   font-size: 120px;
@@ -202,10 +209,10 @@
 
 .feynman__subtitle {
   z-index: 2;
+  margin: 70px 0 0 0;
   line-height: 51px;
   font-size: 36px;
   text-align: center;
-  margin: 70px 0 0 0;
 }
 .feynman__link {
   position: absolute;
@@ -261,6 +268,7 @@
 Блок table, элемент text, модификатор theme в значении dark
 Блок kaufman, элемент triangle*/
 .kaufman__triangle {
+  background-image: url(../images/kaufman-triangle.svg);
   position: absolute;
   width: 877px;
   height: 877px;
@@ -283,9 +291,11 @@
   position: relative;
   justify-content: space-between;
 }
+.footer__column {
+}
 
 .footer__column_content_copyright {
-  width: 50%;
+  flex-basis: 711px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -298,26 +308,32 @@
   line-height: 30px;
   font-size: 18px;
   font-weight: bold;
+  margin: 0;
 }
 
 .footer__column-links {
   margin: 20px 0 16px 0;
+  text-decoration: none;
+  padding-left: 0;
 }
 
-.footer__list {
-  text-decoration: none;
-  list-style-type: none;
-  padding-left: 0;
-  margin: 0;
-}
+/* .footer__list {
+
+} */
 
 .footer__list-link {
+  list-style-type: none;
   line-height: 30px;
   font-size: 18px;
 }
 
+.footer__link_social-logo {
+  margin-right: 10px;
+}
+
 .footer__list-link_facebook::before {
-  content: url(../images/facebook_color_white.svg);
+  /* content: "подробнее"; */
+  /* content: <a href="#"> img src='../images/facebook_color_white.svg';></a>" */
   margin-right: 10px;
 }
 
@@ -334,18 +350,13 @@
 .footer__column_content_social {
 }
 
-.footer__logo {
-  width: 183px;
-  height: 35px;
-}
-
 .footer__author {
   line-height: 25px;
   font-size: 18px;
   margin: 18px 0;
 }
 
-.footer_link {
+.footer__link {
   text-decoration: none;
   color: #ffffff;
 }
