--- a/styles/style.css
+++ b/styles/style.css
@@ -9,6 +9,10 @@
   font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
+.page__link_hover:hover {
+  text-decoration: underline;
+}
+
 .logo {
   width: 183px;
   height: 32px;
@@ -24,6 +28,7 @@
   justify-content: center;
   /* выше установили ограничения для секции */
   position: relative;
+  z-index: 1;
 }
 
 .logo_place_header {
@@ -38,7 +43,6 @@
   font-weight: bold;
   line-height: 96px;
   width: 730px;
-  z-index: 2;
 }
 
 .header__text {
@@ -46,7 +50,6 @@
   font-size: 18px;
   line-height: 25px;
   width: 388px;
-  z-index: 2;
   position: absolute;
   left: 64px;
   bottom: 30px;
@@ -60,10 +63,10 @@
 .header__main-illustration {
   width: 765px;
   height: 608px;
-  z-index: 1;
   position: absolute;
   bottom: 0;
   right: 0;
+  z-index: -1;
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
@@ -74,6 +77,7 @@
   position: absolute;
   top: 64px;
   right: 0;
+  z-index: -2;
 }
 
 .description {
@@ -180,6 +184,7 @@
   position: relative;
   flex-direction: column;
   background-color: #f2f2f2;
+  z-index: 1;
 }
 .feynman__image {
   width: 867px;
@@ -187,6 +192,7 @@
   position: absolute;
   bottom: 0;
   left: 0;
+  z-index: -1;
 }
 
 /* .feynman__text {
@@ -200,7 +206,6 @@
   padding-top: 100px;
   width: 648px;
   margin: 0 auto;
-  z-index: 2;
   line-height: 1.15;
   font-size: 120px;
   font-weight: bold;
@@ -208,7 +213,6 @@
 }
 
 .feynman__subtitle {
-  z-index: 2;
   margin: 70px 0 0 0;
   line-height: 51px;
   font-size: 36px;
@@ -232,6 +236,7 @@
   background-color: #1f1f1f;
   position: relative;
   overflow: hidden;
+  z-index: 1;
 }
 
 .section-title_theme_dark,
@@ -274,6 +279,7 @@
   height: 877px;
   top: 0;
   right: -210px;
+  z-index: -1;
 }
 
 .footer {
