--- a/styles/style.css
+++ b/styles/style.css
@@ -147,9 +147,8 @@
   width: 1100px;
   display: flex;
   margin: auto;
-  flex-direction: column;
   z-index: 1;
-  flex-direction: row;
+  /* flex-direction: row; */
   flex-wrap: wrap;
   padding: 0;
 }
