--- a/styles/style.css
+++ b/styles/style.css
@@ -9,10 +9,6 @@
   font-family: "Helvetica Neue", Arial, sans-serif;
 }
 
-.page__link_hover:hover {
-  text-decoration: underline;
-}
-
 .logo {
   width: 183px;
   height: 32px;
@@ -58,6 +54,10 @@
 .header__link {
   color: #2f80ed;
   text-decoration: none;
+}
+
+.header__link:hover {
+  text-decoration: underline;
 }
 
 .header__main-illustration {
@@ -112,6 +112,10 @@
   font-size: 24px;
 }
 
+.two-columns__paragraph:last-child {
+  margin-bottom: 0;
+}
+
 .two-columns__span-accent {
   font-weight: bold;
 }
@@ -146,7 +150,8 @@
 .table {
   width: 1100px;
   display: flex;
-  margin: auto;
+  justify-content: space-around;
+  align-items: flex-start;
   z-index: 1;
   /* flex-direction: row; */
   flex-wrap: wrap;
@@ -227,6 +232,10 @@
   text-decoration: none;
 }
 
+.feynman__link:hover {
+  text-decoration: underline;
+}
+
 .kaufman {
   padding: 90px 0;
   display: flex;
@@ -273,6 +282,7 @@
 Блок kaufman, элемент triangle*/
 .kaufman__triangle {
   background-image: url(../images/kaufman-triangle.svg);
+  background-size: contain;
   position: absolute;
   width: 877px;
   height: 877px;
@@ -332,24 +342,11 @@
   font-size: 18px;
 }
 
-.footer__link_social-logo {
+.footer__social-icon {
+  width: 16px;
+  height: 16px;
   margin-right: 10px;
-}
-
-.footer__list-link_facebook::before {
-  /* content: "подробнее"; */
-  /* content: <a href="#"> img src='../images/facebook_color_white.svg';></a>" */
-  margin-right: 10px;
-}
-
-.footer__list-link_vk::before {
-  content: url(../images/vk_color_white.svg);
-  margin-right: 10px;
-}
-
-.footer__list-link_instagramm::before {
-  content: url(../images/instagram_color_white.svg);
-  margin-right: 10px;
+  vertical-align: middle;
 }
 
 .footer__column_content_social {
@@ -364,4 +361,8 @@
 .footer__link {
   text-decoration: none;
   color: #ffffff;
+}
+
+.footer__link:hover {
+  text-decoration: underline;
 }
