--- a/styles/style.css
+++ b/styles/style.css
@@ -150,12 +150,13 @@
 .table {
   width: 1100px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: flex-start;
   z-index: 1;
   /* flex-direction: row; */
   flex-wrap: wrap;
   padding: 0;
+  margin: 0;
 }
 
 .table__row {
