--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,7 @@
   /* выше установили ограничения для секции */
   position: relative;
   z-index: 1;
+  overflow: hidden;
 }
 
 .logo_place_header {
@@ -78,6 +79,76 @@
   top: 64px;
   right: 0;
   z-index: -2;
+  animation: rotation 20s infinite linear;
+}
+
+.techniques {
+  padding: 100px 0 0 0;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.cards {
+  width: 920px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 100px;
+  /* gap: 100px; */
+}
+.cards__item {
+  text-align: center;
+  padding-top: 60px;
+}
+.cards__image {
+  margin: 0 40px;
+
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+}
+.cards__title {
+  /* Высота строки 1.15, шрифта 24px, начертание шрифта полужирное */
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+  margin: 43px 0 0 0;
+}
+.cards__description {
+  /* Высота строки 23px, размер шрифта 18px, начертание шрифта
+нормальное */
+  line-height: 23px;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 16px 0 0 0;
+}
+
+.video {
+  padding: 100px 0 0 0;
+  margin-bottom: -60px;
+}
+
+.video__iframes {
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 20px;
+  z-index: 2;
+}
+
+.oakley {
+  padding: 160px 0 0 0;
+  background-color: #f2f2f2;
+}
+
+.video__iframe {
+  width: 515px;
+  height: 316px;
+  margin-left: auto;
+}
+
+.video__iframe:nth-child(2) {
+  margin-left: 0;
 }
 
 .description {
@@ -134,7 +205,7 @@
   font-size: 60px;
   line-height: 1.15;
   font-weight: bold;
-  margin: 0;
+  margin: 0 auto;
   text-align: center;
   z-index: 1;
 }
@@ -144,7 +215,7 @@
   line-height: 34px;
   font-size: 24px;
   text-align: center;
-  margin: 20px 0 0 0;
+  margin: 20px auto 0;
 }
 
 .table {
@@ -208,9 +279,8 @@
 } */
 
 .feynman__title {
-  padding-top: 100px;
   width: 648px;
-  margin: 0 auto;
+  margin: 80px auto 0;
   line-height: 1.15;
   font-size: 120px;
   font-weight: bold;
@@ -290,6 +360,84 @@
   top: 0;
   right: -210px;
   z-index: -1;
+  animation: rotation 60s infinite linear;
+}
+
+.khan {
+  margin: 0 auto;
+  background-color: #f2f2f2;
+}
+
+.khan__container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.khan__author {
+  margin: 0;
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
+}
+.khan__title {
+  margin: 0;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: bold;
+}
+.khan__quote {
+  margin: 50px 0 0 0;
+  width: 790px;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+.khan__quote-author {
+  margin: 36px 0 0 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: bold;
+}
+.khan__quote-author-subline {
+  margin: 10px 0 0 0;
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: normal;
+}
+.khan__book-container {
+  margin: 68px 0 0 0;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+}
+.khan__book-pic {
+  object-fit: cover;
+  width: 620px;
+  height: 608px;
+}
+.khan__buy-link {
+  margin-left: 48px;
+  color: #2f80ed;
+  text-decoration: none;
+  line-height: 42px;
+  font-size: 30px;
+  font-weight: normal;
+}
+
+.resources {
+  padding-top: 100px;
+  margin: 0 auto;
+}
+.resources__logo-zone {
+  width: 1100px;
+  margin: 80px auto 217px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+.resources__logo {
+  width: 270px;
+  height: 38px;
 }
 
 .footer {
