--- a/bloks/cards/cards.css
+++ b/bloks/cards/cards.css
@@ -1,8 +1,8 @@
 .cards {
+  padding-left: 0;
   width: 920px;
   margin: auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   column-gap: 100px;
-  /* gap: 100px; */
 }
